tests/errors/condition_string_type.dang
# Test conditional with string condition
pub result = if ("hello") { "string condition" } else { "default" }
